Hashtag on mobile now aligns correctly

--- a/styles.css
+++ b/styles.css
@@ -336,7 +336,7 @@ main{
 	
 	#hashtag {
 		position: relative;
-		margin-left: 50px;
+		margin-left: 88px;
 	}
 	
 	#info h1,
